--- a/signIn.html
+++ b/signIn.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="signin.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="signUp.css">
 
 </head>
 <body>
-    <p>Already have an account?<b>Sign In</b></p>
-    <br/>
+    Already have an account?<a href="/signUp.html">sign Up </a>
+    <br>
     <b>Sign Up</b>
     <br/>
     <br/>
