--- a/signUp.html
+++ b/signUp.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Don't have an account? <b>Sign Up</b></p>
+    Don't have an account? <a href="/table.html">SignUp</a>
     <br/>
     <b>Sign In</b>
     <br/>
